uibase/src/styles/App.css
/* ... */
.ant-radio-button-wrapper-checked:not(.ant-radio-button-wrapper-disabled) {
  box-shadow: none !important;
}

.ant-radio-button-wrapper-checked:not(.ant-radio-button-wrapper-disabled)::before {
   opacity: 0 !important;
}

.ant-radio-button-wrapper:not(:first-child)::before {
  position: absolute;
  top: 0;
  left: -1px;
  display: none !important;
  width: 0px !important;
  height: 100%;
  background-color: #ffffff !important;
  content: '';
}

.ant-radio-group-solid .ant-radio-button-wrapper-checked:not(.ant-radio-button-wrapper-disabled),
.ant-radio-group-solid .ant-radio-button-wrapper-checked:not(.ant-radio-button-wrapper-disabled):hover {
  color: black !important;
  background: #ffffff !important;
  border: none !important;
  border-bottom: 2px solid #eebf59 !important;

}

.sketch-picker {
  width: 271px !important;
  padding: 0 !important;
  box-sizing: initial;
  background: rgb(255, 255, 255);
  border-radius: 4px;
  box-shadow: none !important;
}
/* Paginator ! */



/*DropDown*/

.ant-dropdown-menu-item:hover, .ant-dropdown-menu-submenu-title:hover{
  background: #FFF8E0!important;
}

.ant-dropdown-menu-item, .ant-dropdown-menu-submenu-title{
  background: #ffffff !important;
}
ul.ant-dropdown-menu.ant-dropdown-menu-light.ant-dropdown-menu-root.ant-dropdown-menu-vertical{
  background-color: white!important;
}

/*Logo*/
.app-logo span, .app-logo-settings span {
  margin: unset!important;
}

 /*Authorization*/



@media screen and (min-width: 1441px) and (max-width: 1920px){
  .secondColumn {
    background: #ffffff;
    height: 100%!important;
    width: 47.18%!important;
    float: right;
  }

  .firstColumn{
    width: 52.82%!important;
    height: 100%!important;
    float: left;
  }

  .lang-login {
    width: 35px;
    height: 35px;
    margin-top: 3.7%;
    margin-right: 6.1%;
    font-style: normal;
    font-weight: normal;
    font-size: 14px;
    line-height: 16px;
    margin-left: 95%;
    color: #8C8C8C;
  }

  .nameOfApp {
    margin-top: 12%;
    text-align: center;
    /*font-family: Roboto;*/
    font-style: normal;
    font-weight: bold;
    font-size: 27px;
    line-height: 35px;
    color: #2A356C;
  }

  .authorizing {
    text-align: center;
    margin-top: 7.4%;
    /*font-family: Roboto;*/
    font-style: normal;
    font-weight: 500;
    font-size: 19px;
    line-height: 23px;
    color: #2A356C;
  }

  .Login {
    text-align: center;
    margin-right: 330px!important;
    margin-top: 4.2%;
    /*font-family: Roboto;*/
    font-style: normal;
    font-weight: normal;
    font-size: 12px;
    line-height: 14px;
    color: #333333;
  }

  .inputLogin {
    text-align: center;
    margin-top: 0.37%;

  }

  .input-login {
    background: #FFFFFF;
    border: 1px solid #E6E6E6;
    box-sizing: border-box;
    border-radius: 4px;
    width: 368px !important;
    height: 34px !important;
  }

  .Password {
    margin-right: 322px!important;
    text-align: center;
    margin-top: 1.5%;
    /*font-family: Roboto;*/
    font-style: normal;
    font-weight: normal;
    font-size: 12px;
    line-height: 14px;
    color: #333333;
  }

  .inputPassword {
    text-align: center;
    margin-top: 4px;
  }

  .button {
    border-radius: 4px;
    margin-top: 3.5%

  }

  .loginButton {
    background: #424D78;
    width: 94px !important;
    height: 34px !important;
    text-align: center;
    /*font-family: Roboto;*/
    font-style: normal;
    font-weight: normal!important;
    font-size: 14px !important;
    line-height: 16px;
    color: #FFFFFF;
  }

  .yellowLineColumn2 {
    position: fixed; /* Фиксированное положение */
    left: 0; bottom: 0; /* Левый нижний угол */
    padding: 8px; /* Поля вокруг текста */
    background: #FFCC66; /* Цвет фона */
    width: 100%; /* Ширина слоя */
  }

  .yellowLineColumn1 {
    position: fixed; /* Фиксированное положение */
    left: 0; bottom: 0; /* Левый нижний угол */
    padding: 8px; /* Поля вокруг текста */
    background: #FFCC66; /* Цвет фона */
    width: 100%; /* Ширина слоя */
  }

  .backGroundImage {
    min-height: 98%!important;
    width: 100%!important;
    height: 100vh!important;
    position: relative;
    background-image: url(../icons/BackGroundForLogin1920.jpg);
}

  .comfort {
    margin-top: 16%;
    /*font-family: Roboto;*/
    margin-left: 5%;
    font-style: normal;
    font-weight: 500!important;
    font-size: 58px;
    line-height: 53px;
    color: #FFFFFF;
    opacity: 1;

  }

  .comfortWord {
    font-style: normal;
    /*font-family: Roboto;*/
    font-weight: 700!important;
    font-size: 58px;
    line-height: 53px;
    color: #FFCC66;
    opacity: 1;
  }

  .secondLine {
    margin-top: 35px;
    /*font-family: Roboto;*/
    margin-left: 5%;
    font-style: normal;
    font-weight: normal;
    font-size: 38px;
    line-height: 30px;
    opacity: 1 !important;
    color: #FFFFFF;
  }
}
/* ... */

